# taiwan-geodoc-hub-upload

./: .dockerignore  .env.example  .env.test.example  .firebaserc  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  conftest.py  firebase.json  prefect.toml.example  pyproject.toml
assets/: sample_ocr_result.txt
functions/: .env.example  .env.test.example  .gitignore  main.py  pytest.ini  requirements-dev.txt  requirements.txt
functions/taiwan_geodoc_hub/infrastructure/: collections.py  environments.py  flask.py  injection_tokens.py  lifespan.py
functions/taiwan_geodoc_hub/infrastructure/auth/: user_dao_adapter.py
functions/taiwan_geodoc_hub/infrastructure/clients/: ocr_space.py
functions/taiwan_geodoc_hub/infrastructure/firestore/: ocr_result_adapter.py  registration_adapter.py  role_adapter.py  snapshot_adapter.py  tenant_adapter.py
functions/taiwan_geodoc_hub/infrastructure/generators/: request_id_generator_adapter.py
functions/taiwan_geodoc_hub/infrastructure/hashers/: bytes_hasher_adapter.py
functions/tests/: conftest.py
functions/tests/e2e/: test_registration_managing.py  test_system_maintaining.py
functions/tests/integration/: test_ocr_space.py  test_role_dao.py  test_tenant_dao.py  test_user_dao.py
functions/tests/unit/: test_bytes_hasher.py  test_environments_helper.py
src/: main.py
src/taiwan_geodoc_hub/adapters/auth/: user_auth_adapter.py
src/taiwan_geodoc_hub/adapters/browser/: auth_adapter.py  auth_pyppeteer_adapter.py
src/taiwan_geodoc_hub/adapters/file_system/: credential_file_system_adapter.py
src/taiwan_geodoc_hub/adapters/firestore/: ocr_result_adapter.py  ocr_result_firestore_adapter.py  process_state_adapter.py  process_state_firestore_adapter.py  registration_adapter.py  role_adapter.py  (+9 more)
src/taiwan_geodoc_hub/infrastructure/: lifespan.py
src/taiwan_geodoc_hub/utils/: asyncio.py  environments.py
tests/: conftest.py
tests/e2e/: test_system_maintaining.py
tests/integration/: test_event_publisher.py  test_ocr_space.py  test_role_dao.py  test_tenant_dao.py  test_user_dao.py
tests/unit/: test_bytes_hasher.py  test_environments_helper.py  test_upload_pdf.py
(+248 files in other folders)
